Added code to clear the previous image results

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <input type="text" placeholder="TV Show Title" name="query">
         <button>Search</button>
     </form>
+
+    <!--This empty div will have the results appended here and also
+    clear new searches) -->
+    <div id="results"></div>
+    
     <script src="app.js"></script>
 </body>
 </html>
